--- a/index.html
+++ b/index.html
@@ -19,13 +19,9 @@
 			</div>
 		</header>
 		<main class="page">
-			<!-- <form data-dev  data-goto-error data-no-validate action="files/sendmail/sendmail.php" method="POST">
-					<input type="text" name="form[email]"  placeholder="E-mail" data-error="Error" class="input">
-					<input type="text">
-					<button type="submit" class="button">Send</button>
-				</form> -->
+			
 
-			<form data-dev data-no-validate action="files/sendmail/sendmail.php" method="POST" id="myForm">
+			<form  data-no-validate action="files/sendmail/sendmail.php" method="POST" id="myForm">
 				<label for="email">Ваш Email:</label>
 				<input type="email" id="userEmail" name="email" required><br>
 
